# src/main/java/it/gov/pagopa/pu/registry/controller/PagoPaRegistryController.java
@@ -1,6 +1,6 @@
 package it.gov.pagopa.pu.registry.controller;
 
-import it.gov.pagopa.pu.registry.controller.generated.PagopaRegistryApi;
+import it.gov.pagopa.pu.registry.controller.generated.PagoPaRegistryApi;
 import it.gov.pagopa.pu.registry.dto.generated.PagoPaRegistryDTO;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -8,12 +8,12 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @Slf4j
-public class PagoPaRegistryController implements PagopaRegistryApi {
+public class PagoPaRegistryController implements PagoPaRegistryApi {
 
   @Override
-  public ResponseEntity<PagoPaRegistryDTO> getPagopaRegistry(String registryId) {
-    log.info("User requested getPagopaRegistry having registryId {}", registryId);
+  public ResponseEntity<PagoPaRegistryDTO> getPagoPaRegistry(String registryId) {
+    log.info("User requested getPagoPaRegistry having registryId {}", registryId);
 
-    return PagopaRegistryApi.super.getPagopaRegistry(registryId);
+    return PagoPaRegistryApi.super.getPagoPaRegistry(registryId);
   }
 }
